Bug 65520 - frequent crash in pa_alsa_path_set_volume
Summary: frequent crash in pa_alsa_path_set_volume
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: alsa (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 99067
  Show dependency treegraph
 
Reported: 2013-06-07 18:26 UTC by Matthias Clasen
Modified: 2017-05-18 20:38 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Matthias Clasen 2013-06-07 18:26:23 UTC
We are seeing a somewhat frequent crash in pa_alsa_path_set_volume in Fedora 18 and 19. See 
https://retrace.fedoraproject.org/faf/problems/682670/
https://bugzilla.redhat.com/show_bug.cgi?id=970557

I've asked Lennart about this, but he didn't have an immediate idea.
Comment 1 Arun Raghavan 2013-07-01 16:42:19 UTC
Any chance we could get verbose pulseaudio logs on this one? (log-level = debug in /etc/pulse/daemon.conf and repro the assert). That along with alsa-info would be a good start.
Comment 2 Luke Yelavich 2017-02-26 22:08:08 UTC
Here is a bug in Launchpad, that looks related, and has a lot of useful data that could be used to track this down, including a user who seems to regularly be able to reproduce.

https://bugs.launchpad.net/bugs/1539209
Comment 3 Tanu Kaskinen 2017-02-27 09:19:20 UTC
Crash bug, marking as a release blocker.
Comment 4 Georg Chini 2017-04-28 18:18:04 UTC
Possible solution can be found here:
https://patchwork.freedesktop.org/patch/153418/
Could you please test?
Comment 5 Tanu Kaskinen 2017-05-18 20:38:28 UTC
Georg's patch has been merged, I'll mark this bug as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.